# bikeshed-rs

./: Cargo.toml  README.md  build.rs  task.rs
.devcontainer/: devcontainer.json
.github/workflows/: cargo-build.yml  cargo-test.yml  gh-release-create.yml
src/: main.rs
tests/: bikeshed_test.rs  test.rs
xtask/: Cargo.toml
