[package]
name = "bikeshed2"
version = "4.1.61"
edition = "2021"

[[bin]]
name = "bikeshed"
path = "src/main.rs"

[build-dependencies]
tar = "0.4.40"
zip = "1.2.1"
flate2 = "1.0.30"
xdg = "2.5.2"
build-target = "0.4.0"

[dependencies]
tar = "0.4.40"
zip = "1.2.1"
flate2 = "1.0.30"
xdg = "2.5.2"
build-target = "0.4.0"
